infra/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: DB_DATABASE
              value: TechChallenge
            - name: DB_URL
              value: mongodb://techchallenge:password@mongo:27017/
          image: techchallenge/backend
          name: backend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "700Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
      restartPolicy: Always
status: {}
