infra/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: backend
  name: backend
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8080
  selector:
    io.kompose.service: backend
status:
  loadBalancer: {}
