infra/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  ports:
      - port: 27017
  selector:
    io.kompose.service: mongo
status:
  loadBalancer: {}
