infra/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
spec:
  defaultBackend:
    service:
      name: mongo-service
      port:
        number: 27017
